--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
+    "@types/node": "^17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
