--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "next": "12.1.6",
+    "phosphor-react": "^1.4.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "swiper": "^8.1.6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
