--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
