--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-gtm-module": "^2.0.11",
     "react-intersection-observer": "^9.1.0",
     "swiper": "^8.1.6",
     "yup": "^0.32.11"
@@ -27,6 +28,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "@types/react-gtm-module": "^2.0.1",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
